Bug 72006 - Load URL dropdown list remains empty
Summary: Load URL dropdown list remains empty
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Andrzej Hunt
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-11-25 21:19 UTC by Jean-Baptiste Faure
Modified: 2014-04-30 14:06 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-11-25 21:19:06 UTC
Steps to reproduce:
1/ open and close several files in the module you want in order to fill the recent files list
2/ in Writer (for example) add the "Load URL" button to the standard toolbar: right click in the toolbar, go to "Visible Buttons" and choose "Load URL".

Current behavior: the dropdown list is empty
Expected behavior: the dropdown list shows last edited files as in previous versions.

Best regards
Comment 1 Jean-Baptiste Faure 2013-11-25 21:20:49 UTC
Set regression keyword because it works in version 4.1.

Best regards. JBF
Comment 2 sophie 2013-12-04 09:33:52 UTC
Confirmed using GZAsH||Version: 4.2.0.0.beta1
oKnh7||Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7 
Set to new - Sophie
Comment 3 Andras Timar 2014-03-13 12:09:53 UTC
The first bad commit is from Jesus: f7feb4227d83f4f095597a44826277aaae2bc0df
AddDocumentToPickList adds elements with SvtHistoryOptions().AppendItem( ePICKLIST, ....) while the deleted code used  SvtHistoryOptions().AppendItem( eHISTORY, ....), maybe this is the source of the problem.
Comment 4 Andrzej Hunt 2014-04-19 10:57:48 UTC
It seems all history functionality has been moved from the URL history list (eHISTORY) into the picklist instead -- I'm guessing it makes most sense just to populate the dropdown from the picklist rather than adding to the URL history list (which isn't used for any other purpose), but since I'm not 100% sure I've put the patch on gerrit (along with a followup which removes any remaining mentions of the now unused history list).

Fix:
https://gerrit.libreoffice.org/#/c/9104/

(Follow-up cleanup : https://gerrit.libreoffice.org/#/c/9105/ )
Comment 5 Commit Notification 2014-04-26 07:44:02 UTC
Andrzej Hunt committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b8315b1c2f43ab44651e5089a63fb63e23a1ea73

fdo#72006 Populate "Load URL" dropdown from picklist.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-04-30 10:10:57 UTC
Andrzej Hunt committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74b45188b71a9fe22bb8997e3a23cc9a4b43d3c8&h=libreoffice-4-2

fdo#72006 Populate "Load URL" dropdown from picklist.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Jean-Baptiste Faure 2014-04-30 14:06:50 UTC
Verified fixed on both master and version 4.2.5.0.0+ under Ubuntu 14.04.

Thank you very much.

Best regards. JBF