fdo#72006 Populate "Load URL" dropdown from picklist.

f7feb4227d83f4f095597a44826277aaae2bc0df stopped any newly opened documents
from being added to the "History" list (and instead adds them to the picklist),
since the history list is not used anywhere else, and since the picklist performs
an equivalent function, it makes most sense just to use the picklist to populate
the list of URLs.

Change-Id: I5a06e7fefe3dc1fbe266f3191de4fbac03601858